fixed logo on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -272,10 +272,21 @@ footer{
 
 @media only screen and (max-width: 768px) {
 
+    #TopSection .logo {
+        height: 60px;
+        width: auto;
+        min-width: 100px;
+        max-width: 350px;
+    }
+
     #TopSection .name {
         min-width: 100px;
         max-width: 350px;
         font-size: 80px;
+    }
+
+    #TopSection .mscroll {
+        display: none;
     }
 
     #AboutMe {
